docs-archive/apache-airflow-providers-databricks/7.19.0/_sources/_api/airflow/providers/databricks/operators/databricks/index.rst.txt
airflow.providers.databricks.operators.databricks
=================================================

.. py:module:: airflow.providers.databricks.operators.databricks

.. autoapi-nested-parse::

   This module contains Databricks operators.



Attributes
----------

.. autoapisummary::

   airflow.providers.databricks.operators.databricks.DEFER_METHOD_NAME
   airflow.providers.databricks.operators.databricks.XCOM_RUN_ID_KEY
   airflow.providers.databricks.operators.databricks.XCOM_JOB_ID_KEY
   airflow.providers.databricks.operators.databricks.XCOM_RUN_PAGE_URL_KEY
   airflow.providers.databricks.operators.databricks.XCOM_STATEMENT_ID_KEY


Classes
-------

.. autoapisummary::

   airflow.providers.databricks.operators.databricks.ResumableJobMixin
   airflow.providers.databricks.operators.databricks.DatabricksJobRunLink
   airflow.providers.databricks.operators.databricks.DatabricksCreateJobsOperator
   airflow.providers.databricks.operators.databricks.DatabricksSubmitRunOperator
   airflow.providers.databricks.operators.databricks.DatabricksRunNowOperator
   airflow.providers.databricks.operators.databricks.DatabricksSQLStatementsOperator
   airflow.providers.databricks.operators.databricks.DatabricksTaskBaseOperator
   airflow.providers.databricks.operators.databricks.DatabricksNotebookOperator
   airflow.providers.databricks.operators.databricks.DatabricksTaskOperator


Functions
---------

.. autoapisummary::

   airflow.providers.databricks.operators.databricks.is_repair_reason_match_exist
   airflow.providers.databricks.operators.databricks.update_job_for_repair


Module Contents
---------------

.. py:class:: ResumableJobMixin(*, durable = _DURABLE_UNSET, **kwargs)

   Airflow <3.3 stub, task_state_store unavailable, always submits fresh.


   .. py:attribute:: external_id_key
      :type:  str
      :value: 'databricks_run_id'



   .. py:attribute:: durable
      :value: False



   .. py:method:: execute_resumable(context)


.. py:data:: DEFER_METHOD_NAME
   :value: 'execute_complete'


.. py:data:: XCOM_RUN_ID_KEY
   :value: 'run_id'


.. py:data:: XCOM_JOB_ID_KEY
   :value: 'job_id'


.. py:data:: XCOM_RUN_PAGE_URL_KEY
   :value: 'run_page_url'


.. py:data:: XCOM_STATEMENT_ID_KEY
   :value: 'statement_id'


.. py:function:: is_repair_reason_match_exist(operator, run_state)

   Check if the repair reason matches the run state message.

   :param operator: Databricks operator being handled
   :param run_state: Run state of the Databricks job
   :return: True if repair reason matches the run state message, False otherwise


.. py:function:: update_job_for_repair(operator, hook, job_id, run_state)

   Update job settings(partial) to repair the run with all failed tasks.

   :param operator: Databricks operator being handled
   :param hook: Databricks hook
   :param job_id: Job ID of Databricks
   :param run_state: Run state of the Databricks job


.. py:class:: DatabricksJobRunLink

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperatorLink`


   Constructs a link to monitor a Databricks Job Run.


   .. py:attribute:: name
      :value: 'See Databricks Job Run'


      Name of the link. This will be the button name on the task UI.



   .. py:method:: get_link(operator, *, ti_key)

      Link to external system.

      :param operator: The Airflow operator object this link is associated to.
      :param ti_key: TaskInstance ID to return link for.
      :return: link to external system



.. py:class:: DatabricksCreateJobsOperator(*, json = None, name = None, description = None, tags = None, tasks = None, job_clusters = None, email_notifications = None, webhook_notifications = None, notification_settings = None, timeout_seconds = None, schedule = None, max_concurrent_runs = None, git_source = None, access_control_list = None, databricks_conn_id = 'databricks_default', polling_period_seconds = 30, databricks_retry_limit = 3, databricks_retry_delay = 1, databricks_retry_args = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Creates (or resets) a Databricks job using the API endpoint.

   .. seealso::
       https://docs.databricks.com/api/workspace/jobs/create
       https://docs.databricks.com/api/workspace/jobs/reset

   :param json: A JSON object containing API parameters which will be passed
       directly to the ``api/2.2/jobs/create`` endpoint. The other named parameters
       (i.e. ``name``, ``tags``, ``tasks``, etc.) to this operator will
       be merged with this json dictionary if they are provided.
       If there are conflicts during the merge, the named parameters will
       take precedence and override the top level json keys. (templated)
       When templated, ``json`` may resolve to a mapping, a JSON string, or a Python-dict-literal
       string (the latter is what classic Jinja produces when rendering a dict pulled from XCom).
       To avoid the string round-trip, prefer passing an ``XComArg`` (e.g. ``producer.output``),
       which resolves to a real ``dict`` at runtime.

       .. seealso::
           For more information about templating see :ref:`concepts:jinja-templating`.
   :param name: An optional name for the job.
   :param description: An optional description for the job.
   :param tags: A map of tags associated with the job.
   :param tasks: A list of task specifications to be executed by this job.
       Array of objects (JobTaskSettings).
   :param job_clusters: A list of job cluster specifications that can be shared and reused by
       tasks of this job. Array of objects (JobCluster).
   :param email_notifications: Object (JobEmailNotifications).
   :param webhook_notifications: Object (WebhookNotifications).
   :param notification_settings: Optional notification settings.
   :param timeout_seconds: An optional timeout applied to each run of this job.
   :param schedule: Object (CronSchedule).
   :param max_concurrent_runs: An optional maximum allowed number of concurrent runs of the job.
   :param git_source: An optional specification for a remote repository containing the notebooks
       used by this job's notebook tasks. Object (GitSource).
   :param access_control_list: List of permissions to set on the job. Array of object
       (AccessControlRequestForUser) or object (AccessControlRequestForGroup) or object
       (AccessControlRequestForServicePrincipal).

       .. seealso::
           This will only be used on create. In order to reset ACL consider using the Databricks
           UI.
   :param databricks_conn_id: Reference to the
       :ref:`Databricks connection <howto/connection:databricks>`. (templated)
   :param polling_period_seconds: Controls the rate which we poll for the result of
       this run. By default the operator will poll every 30 seconds.
   :param databricks_retry_limit: Amount of times retry if the Databricks backend is
       unreachable. Its value must be greater than or equal to 1.
   :param databricks_retry_delay: Minimum wait in seconds between retryable attempts when
       using the default retry strategy. The wait uses exponential backoff (doubling after
       each failure, capped at ``2 ** databricks_retry_limit`` seconds). May be a floating
       point number.
   :param databricks_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.

   .. note::
       If ``parameters`` is not set in ``json`` and the operator's ``params`` dict is non-empty,
       the operator's ``params`` are automatically converted to job-level ``parameters`` (a list
       of ``{"name": k, "default": v}`` entries) so that Airflow Dag params can be forwarded as
       Databricks job parameters without hardcoding them in ``json``.



   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('json', 'name', 'description', 'tags', 'tasks', 'job_clusters', 'email_notifications',...



   .. py:attribute:: ui_color
      :value: '#1CB1C2'



   .. py:attribute:: ui_fgcolor
      :value: '#fff'



   .. py:attribute:: json
      :value: None



   .. py:attribute:: name
      :value: None



   .. py:attribute:: description
      :value: None



   .. py:attribute:: tags
      :value: None



   .. py:attribute:: tasks
      :value: None



   .. py:attribute:: job_clusters
      :value: None



   .. py:attribute:: email_notifications
      :value: None



   .. py:attribute:: webhook_notifications
      :value: None



   .. py:attribute:: notification_settings
      :value: None



   .. py:attribute:: timeout_seconds
      :value: None



   .. py:attribute:: schedule
      :value: None



   .. py:attribute:: max_concurrent_runs
      :value: None



   .. py:attribute:: git_source
      :value: None



   .. py:attribute:: access_control_list
      :value: None



   .. py:attribute:: databricks_conn_id
      :value: 'databricks_default'



   .. py:attribute:: polling_period_seconds
      :value: 30



   .. py:attribute:: databricks_retry_limit
      :value: 3



   .. py:attribute:: databricks_retry_delay
      :value: 1



   .. py:attribute:: databricks_retry_args
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: DatabricksSubmitRunOperator(*, json = None, tasks = None, spark_jar_task = None, notebook_task = None, spark_python_task = None, spark_submit_task = None, pipeline_task = None, dbt_task = None, new_cluster = None, existing_cluster_id = None, libraries = None, run_name = None, timeout_seconds = None, databricks_conn_id = 'databricks_default', polling_period_seconds = 30, databricks_retry_limit = 3, databricks_retry_delay = 1, databricks_retry_args = None, do_xcom_push = True, idempotency_token = None, access_control_list = None, wait_for_termination = True, git_source = None, performance_target = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), openlineage_inject_parent_job_info = conf.getboolean('openlineage', 'spark_inject_parent_job_info', fallback=False), openlineage_inject_transport_info = conf.getboolean('openlineage', 'spark_inject_transport_info', fallback=False), durable = None, **kwargs)

   Bases: :py:obj:`airflow.sdk.ResumableJobMixin`, :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Submits a Spark job run to Databricks using the api/2.2/jobs/runs/submit API endpoint.

   See: https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunsSubmit

   There are three ways to instantiate this operator.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DatabricksSubmitRunOperator`

   :param tasks: Array of Objects(RunSubmitTaskSettings) <= 100 items.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunsSubmit
   :param json: A JSON object containing API parameters which will be passed
       directly to the ``api/2.2/jobs/runs/submit`` endpoint. The other named parameters
       (i.e. ``spark_jar_task``, ``notebook_task``..) to this operator will
       be merged with this json dictionary if they are provided.
       If there are conflicts during the merge, the named parameters will
       take precedence and override the top level json keys. (templated)
       When templated, ``json`` may resolve to a mapping, a JSON string, or a Python-dict-literal
       string (the latter is what classic Jinja produces when rendering a dict pulled from XCom).
       To avoid the string round-trip, prefer passing an ``XComArg`` (e.g. ``producer.output``),
       which resolves to a real ``dict`` at runtime.

       .. seealso::
           For more information about templating see :ref:`concepts:jinja-templating`.
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunsSubmit
   :param spark_jar_task: The main class and parameters for the JAR task. Note that
       the actual JAR is specified in the ``libraries``.
       *EITHER* ``spark_jar_task`` *OR* ``notebook_task`` *OR* ``spark_python_task``
       *OR* ``spark_submit_task`` *OR* ``pipeline_task`` *OR* ``dbt_task`` should be specified.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/2.0/jobs.html#jobssparkjartask
   :param notebook_task: The notebook path and parameters for the notebook task.
       *EITHER* ``spark_jar_task`` *OR* ``notebook_task`` *OR* ``spark_python_task``
       *OR* ``spark_submit_task`` *OR* ``pipeline_task`` *OR* ``dbt_task`` should be specified.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/2.0/jobs.html#jobsnotebooktask
   :param spark_python_task: The python file path and parameters to run the python file with.
       *EITHER* ``spark_jar_task`` *OR* ``notebook_task`` *OR* ``spark_python_task``
       *OR* ``spark_submit_task`` *OR* ``pipeline_task`` *OR* ``dbt_task`` should be specified.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/2.0/jobs.html#jobssparkpythontask
   :param spark_submit_task: Parameters needed to run a spark-submit command.
       *EITHER* ``spark_jar_task`` *OR* ``notebook_task`` *OR* ``spark_python_task``
       *OR* ``spark_submit_task`` *OR* ``pipeline_task`` *OR* ``dbt_task`` should be specified.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/2.0/jobs.html#jobssparksubmittask
   :param pipeline_task: Parameters needed to execute a Delta Live Tables pipeline task.
       The provided dictionary must contain at least ``pipeline_id`` field!
       *EITHER* ``spark_jar_task`` *OR* ``notebook_task`` *OR* ``spark_python_task``
       *OR* ``spark_submit_task`` *OR* ``pipeline_task`` *OR* ``dbt_task`` should be specified.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/2.0/jobs.html#jobspipelinetask
   :param dbt_task: Parameters needed to execute a dbt task.
       The provided dictionary must contain at least the ``commands`` field and the
       ``git_source`` parameter also needs to be set.
       *EITHER* ``spark_jar_task`` *OR* ``notebook_task`` *OR* ``spark_python_task``
       *OR* ``spark_submit_task`` *OR* ``pipeline_task`` *OR* ``dbt_task`` should be specified.
       This field will be templated.

   :param new_cluster: Specs for a new cluster on which this task will be run.
       *EITHER* ``new_cluster`` *OR* ``existing_cluster_id`` should be specified
       (except when ``pipeline_task`` is used).
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/2.0/jobs.html#jobsclusterspecnewcluster
   :param existing_cluster_id: ID for existing cluster on which to run this task.
       *EITHER* ``new_cluster`` *OR* ``existing_cluster_id`` should be specified
       (except when ``pipeline_task`` is used).
       This field will be templated.
   :param libraries: Libraries which this run will use.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/2.0/jobs.html#managedlibrarieslibrary
   :param run_name: The run name used for this task.
       By default this will be set to the Airflow ``task_id``. This ``task_id`` is a
       required parameter of the superclass ``BaseOperator``.
       This field will be templated.
   :param idempotency_token: an optional token that can be used to guarantee the idempotency of job run
       requests. If a run with the provided token already exists, the request does not create a new run but
       returns the ID of the existing run instead.  This token must have at most 64 characters.
   :param access_control_list: optional list of dictionaries representing Access Control List (ACL) for
       a given job run.  Each dictionary consists of following field - specific subject (``user_name`` for
       users, or ``group_name`` for groups), and ``permission_level`` for that subject.  See Jobs API
       documentation for more details.
   :param wait_for_termination: if we should wait for termination of the job run. ``True`` by default.
   :param timeout_seconds: The timeout for this run. By default a value of 0 is used
       which means to have no timeout.
       This field will be templated.
   :param databricks_conn_id: Reference to the :ref:`Databricks connection <howto/connection:databricks>`.
       By default and in the common case this will be ``databricks_default``. To use
       token based authentication, provide the key ``token`` in the extra field for the
       connection and create the key ``host`` and leave the ``host`` field empty. (templated)
   :param polling_period_seconds: Controls the rate which we poll for the result of
       this run. By default the operator will poll every 30 seconds.
   :param databricks_retry_limit: Amount of times retry if the Databricks backend is
       unreachable. Its value must be greater than or equal to 1.
   :param databricks_retry_delay: Minimum wait in seconds between retryable attempts when
       using the default retry strategy. The wait uses exponential backoff (doubling after
       each failure, capped at ``2 ** databricks_retry_limit`` seconds). May be a floating
       point number.
   :param databricks_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param do_xcom_push: Whether we should push run_id and run_page_url to xcom.
   :param git_source: Optional specification of a remote git repository from which
       supported task types are retrieved.
   :param performance_target: Optional performance mode for the run on serverless compute.
       Either ``PERFORMANCE_OPTIMIZED`` (prioritizes fast startup and execution) or
       ``STANDARD`` (enables cost-efficient execution of serverless workloads). This field
       will be templated.

       .. seealso::
           https://docs.databricks.com/api/workspace/jobs/submit
   :param deferrable: Run operator in the deferrable mode.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunsSubmit
   :param openlineage_inject_parent_job_info: If True, injects OpenLineage parent job information
       into the ``new_cluster`` ``spark_conf`` so the Spark job emits a ``parentRunFacet`` linking
       back to the Airflow task. Defaults to the
       ``openlineage.spark_inject_parent_job_info`` config value.
   :param openlineage_inject_transport_info: If True, injects OpenLineage transport configuration
       into the ``new_cluster`` ``spark_conf`` so the Spark job sends OL events to the same backend
       as Airflow. Defaults to the ``openlineage.spark_inject_transport_info`` config value.
   :param durable: When ``True`` (the default), the Databricks run id is persisted to task state
       before polling begins so that a worker crash and retry reconnects to the existing run
       instead of submitting a duplicate. Set to ``False`` to always submit a fresh run on retry.
       Requires Airflow 3.3+; on earlier versions it is silently ignored.

   .. note::
       If the operator's ``params`` dict is non-empty, it is automatically forwarded into the
       dict-shaped parameter slot of every task in ``json`` whose corresponding field is empty:
       ``notebook_task.base_parameters``, ``python_wheel_task.named_parameters``,
       ``sql_task.parameters``, ``run_job_task.job_parameters``. Tasks whose only parameter
       field is ``List[str]`` (``spark_jar_task``, ``spark_python_task``, ``spark_submit_task``)
       are skipped because there is no canonical mapping from a key/value dict to a positional
       argument list.


   .. py:attribute:: external_id_key
      :value: 'databricks_run_id'



   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('json', 'tasks', 'spark_jar_task', 'notebook_task', 'spark_python_task', 'spark_submit_task',...



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.json-tpl',)



   .. py:attribute:: ui_color
      :value: '#1CB1C2'



   .. py:attribute:: ui_fgcolor
      :value: '#fff'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: json
      :value: None



   .. py:attribute:: tasks
      :value: None



   .. py:attribute:: spark_jar_task
      :value: None



   .. py:attribute:: notebook_task
      :value: None



   .. py:attribute:: spark_python_task
      :value: None



   .. py:attribute:: spark_submit_task
      :value: None



   .. py:attribute:: pipeline_task
      :value: None



   .. py:attribute:: dbt_task
      :value: None



   .. py:attribute:: new_cluster
      :value: None



   .. py:attribute:: existing_cluster_id
      :value: None



   .. py:attribute:: libraries
      :value: None



   .. py:attribute:: run_name
      :value: None



   .. py:attribute:: timeout_seconds
      :value: None



   .. py:attribute:: idempotency_token
      :value: None



   .. py:attribute:: access_control_list
      :value: None



   .. py:attribute:: git_source
      :value: None



   .. py:attribute:: performance_target
      :value: None



   .. py:attribute:: databricks_conn_id
      :value: 'databricks_default'



   .. py:attribute:: polling_period_seconds
      :value: 30



   .. py:attribute:: databricks_retry_limit
      :value: 3



   .. py:attribute:: databricks_retry_delay
      :value: 1



   .. py:attribute:: databricks_retry_args
      :value: None



   .. py:attribute:: wait_for_termination
      :value: True



   .. py:attribute:: deferrable


   .. py:attribute:: openlineage_inject_parent_job_info


   .. py:attribute:: openlineage_inject_transport_info


   .. py:attribute:: run_id
      :type:  int | None
      :value: None



   .. py:attribute:: do_xcom_push
      :value: True



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: submit_job(context)

      Submit the job to the external system. Return its external ID.

      The returned ID must not be ``None``, a ``None`` return is treated as
      "no ID available" and the ID will not be persisted to task state.



   .. py:method:: get_job_status(external_id, context)

      Query the external system for the current job status.

      ``context`` is provided so implementations can use it if needed to implement advanced features such as:

      - cache terminal status to ``task_state_store`` when the remote resource may be
        ephemeral (e.g. a K8s driver pod that gets garbage-collected after completion),



   .. py:method:: is_job_active(status)

      Return True if the job is still running and can be reconnected to.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"RUNNING"``, ``"Pending"``, ``"ContainerCreating"``).



   .. py:method:: is_job_succeeded(status)

      Return True if the job completed successfully.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"FINISHED"``, ``"Succeeded"``).



   .. py:method:: poll_until_complete(external_id, context)

      Block until the job reaches a terminal state. Raise on failure.



   .. py:method:: get_job_result(external_id, context)

      Return the job result after completion. Return None if not applicable.



   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



   .. py:method:: execute_complete(context, event)


.. py:class:: DatabricksRunNowOperator(*, job_id = None, job_name = None, job_parameters = None, json = None, dbt_commands = None, notebook_params = None, python_params = None, jar_params = None, spark_submit_params = None, python_named_params = None, idempotency_token = None, databricks_conn_id = 'databricks_default', polling_period_seconds = 30, databricks_retry_limit = 3, databricks_retry_delay = 1, databricks_retry_args = None, do_xcom_push = True, wait_for_termination = True, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), repair_run = False, databricks_repair_reason_new_settings = None, cancel_previous_runs = False, forward_dag_params = True, durable = None, **kwargs)

   Bases: :py:obj:`airflow.sdk.ResumableJobMixin`, :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Runs an existing Spark job run to Databricks using the api/2.2/jobs/run-now API endpoint.

   See: https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunNow

   There are two ways to instantiate this operator.

   In the first way, you can take the JSON payload that you typically use
   to call the ``api/2.2/jobs/run-now`` endpoint and pass it directly
   to our ``DatabricksRunNowOperator`` through the ``json`` parameter.
   For example ::

       json = {
           "job_id": 42,
           "job_parameters": {"dry-run": "true", "oldest-time-to-consider": "1457570074236"},
       }

       notebook_run = DatabricksRunNowOperator(task_id="notebook_run", json=json)

   Another way to accomplish the same thing is to use the named parameters
   of the ``DatabricksRunNowOperator`` directly. Note that there is exactly
   one named parameter for each top level parameter in the ``run-now``
   endpoint. In this method, your code would look like this: ::

       job_id = 42

       dbt_commands = ["dbt deps", "dbt seed", "dbt run"]

       notebook_params = {"dry-run": "true", "oldest-time-to-consider": "1457570074236"}

       python_params = ["douglas adams", "42"]

       jar_params = ["douglas adams", "42"]

       spark_submit_params = ["--class", "org.apache.spark.examples.SparkPi"]

       notebook_run = DatabricksRunNowOperator(
           job_id=job_id,
           dbt_commands=dbt_commands,
           notebook_params=notebook_params,
           python_params=python_params,
           jar_params=jar_params,
           spark_submit_params=spark_submit_params,
       )

   In the case where both the json parameter **AND** the named parameters
   are provided, they will be merged together. If there are conflicts during the merge,
   the named parameters will take precedence and override the top level ``json`` keys.

   Currently the named parameters that ``DatabricksRunNowOperator`` supports are
       - ``job_id``
       - ``job_name``
       - ``job_parameters``
       - ``json``
       - ``dbt_commands``
       - ``notebook_params``
       - ``python_params``
       - ``python_named_parameters``
       - ``jar_params``
       - ``spark_submit_params``
       - ``idempotency_token``
       - ``repair_run``
       - ``databricks_repair_reason_new_settings``
       - ``cancel_previous_runs``

   :param job_id: the job_id of the existing Databricks job.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunNow
   :param job_name: the name of the existing Databricks job.
       It must exist only one job with the specified name.
       ``job_id`` and ``job_name`` are mutually exclusive.
       This field will be templated.

   :param job_parameters: A dict from keys to values that override or augment the job's
       parameters for this run. Job parameters are passed to any of the job's tasks that
       accept key-value parameters. Job parameters supersede ``notebook_params``, ``python_params``,
       ``python_named_parameters``, ``jar_params``, ``spark_submit_params``, and they cannot be used in
       combination.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/en/workflows/jobs/settings.html#add-parameters-for-all-job-tasks

   :param json: A JSON object containing API parameters which will be passed
       directly to the ``api/2.2/jobs/run-now`` endpoint. The other named parameters
       (i.e. ``notebook_params``, ``spark_submit_params``..) to this operator will
       be merged with this json dictionary if they are provided.
       If there are conflicts during the merge, the named parameters will
       take precedence and override the top level json keys. (templated)
       When templated, ``json`` may resolve to a mapping, a JSON string, or a Python-dict-literal
       string (the latter is what classic Jinja produces when rendering a dict pulled from XCom).
       To avoid the string round-trip, prefer passing an ``XComArg`` (e.g. ``producer.output``),
       which resolves to a real ``dict`` at runtime.

       .. seealso::
           For more information about templating see :ref:`concepts:jinja-templating`.
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunNow

   :param dbt_commands: A list containing the dbt commands to run using the dbt command line
       interface. This field will be templated.

       .. seealso::
           https://docs.databricks.com/en/jobs/dbt.html

   :param notebook_params: A dict from keys to values for jobs with notebook task,
       e.g. "notebook_params": {"name": "john doe", "age":  "35"}.
       The map is passed to the notebook and will be accessible through the
       dbutils.widgets.get function. See Widgets for more information.
       If not specified upon run-now, the triggered run will use the
       job's base parameters. notebook_params cannot be
       specified in conjunction with jar_params. The json representation
       of this field (i.e. {"notebook_params":{"name":"john doe","age":"35"}})
       cannot exceed 10,000 bytes.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/user-guide/notebooks/widgets.html
   :param python_params: A list of parameters for jobs with python tasks,
       e.g. "python_params": ["john doe", "35"].
       The parameters will be passed to python file as command line parameters.
       If specified upon run-now, it would overwrite the parameters specified in job setting.
       The json representation of this field (i.e. {"python_params":["john doe","35"]})
       cannot exceed 10,000 bytes.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunNow
   :param python_named_params: A list of named parameters for jobs with python wheel tasks,
       e.g. "python_named_params": {"name": "john doe", "age":  "35"}.
       If specified upon run-now, it would overwrite the parameters specified in job setting.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunNow
   :param jar_params: A list of parameters for jobs with JAR tasks,
       e.g. "jar_params": ["john doe", "35"].
       The parameters will be passed to JAR file as command line parameters.
       If specified upon run-now, it would overwrite the parameters specified in
       job setting.
       The json representation of this field (i.e. {"jar_params":["john doe","35"]})
       cannot exceed 10,000 bytes.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunNow
   :param spark_submit_params: A list of parameters for jobs with spark submit task,
       e.g. "spark_submit_params": ["--class", "org.apache.spark.examples.SparkPi"].
       The parameters will be passed to spark-submit script as command line parameters.
       If specified upon run-now, it would overwrite the parameters specified
       in job setting.
       The json representation of this field cannot exceed 10,000 bytes.
       This field will be templated.

       .. seealso::
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsRunNow
   :param idempotency_token: an optional token that can be used to guarantee the idempotency of job run
       requests. If a run with the provided token already exists, the request does not create a new run but
       returns the ID of the existing run instead.  This token must have at most 64 characters.
   :param databricks_conn_id: Reference to the :ref:`Databricks connection <howto/connection:databricks>`.
       By default and in the common case this will be ``databricks_default``. To use
       token based authentication, provide the key ``token`` in the extra field for the
       connection and create the key ``host`` and leave the ``host`` field empty. (templated)
   :param polling_period_seconds: Controls the rate which we poll for the result of
       this run. By default, the operator will poll every 30 seconds.
   :param databricks_retry_limit: Amount of times retry if the Databricks backend is
       unreachable. Its value must be greater than or equal to 1.
   :param databricks_retry_delay: Minimum wait in seconds between retryable attempts when
       using the default retry strategy. The wait uses exponential backoff (doubling after
       each failure, capped at ``2 ** databricks_retry_limit`` seconds). May be a floating
       point number.
   :param databricks_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param do_xcom_push: Whether we should push run_id and run_page_url to xcom.
   :param wait_for_termination: if we should wait for termination of the job run. ``True`` by default.
   :param deferrable: Run operator in the deferrable mode.
   :param repair_run: Repair the databricks run in case of failure.
   :param databricks_repair_reason_new_settings: A dict of reason and new_settings JSON object for which
           to repair the run. `None` by default. `None` means to repair at all cases with existing job
           settings otherwise check whether `RunState` state_message contains reason and
           update job settings as per new_settings using databricks partial job update endpoint
           (https://docs.databricks.com/api/workspace/jobs/update). If nothing is matched, then repair
           will not get triggered.
   :param cancel_previous_runs: Cancel all existing running jobs before submitting new one.
   :param durable: When ``True`` (the default), the Databricks run id is persisted to task state
       before polling begins so that a worker crash and retry reconnects to the existing run
       instead of triggering a duplicate run of the same job. Set to ``False`` to always trigger a
       fresh run on retry. Requires Airflow 3.3+; on earlier versions it is silently ignored.
   :param forward_dag_params: Whether to forward Dag-level params as ``job_parameters``
       when no ``job_parameters`` are specified. (default: ``True``)

   .. note::
       If ``job_parameters`` is not set in ``json`` and the operator's ``params`` dict is
       non-empty, the operator's ``params`` are automatically forwarded as ``job_parameters``
       so that Airflow Dag params can be passed dynamically to Databricks runs without
       hardcoding them in ``json``. Set ``forward_dag_params=False`` to disable this.
       Note that the Databricks API does not permit ``job_parameters`` to be used in combination
       with ``notebook_params``, ``python_params``, ``jar_params``, ``spark_submit_params``,
       ``python_named_params``, or ``dbt_commands``; auto-forwarding is automatically skipped
       when any of those parameters are set.


   .. py:attribute:: external_id_key
      :value: 'databricks_run_now_id'



   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('json', 'job_id', 'job_name', 'job_parameters', 'dbt_commands', 'notebook_params',...



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.json-tpl',)



   .. py:attribute:: ui_color
      :value: '#1CB1C2'



   .. py:attribute:: ui_fgcolor
      :value: '#fff'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: json
      :value: None



   .. py:attribute:: job_id
      :value: None



   .. py:attribute:: job_name
      :value: None



   .. py:attribute:: job_parameters
      :value: None



   .. py:attribute:: dbt_commands
      :value: None



   .. py:attribute:: notebook_params
      :value: None



   .. py:attribute:: python_params
      :value: None



   .. py:attribute:: python_named_params
      :value: None



   .. py:attribute:: jar_params
      :value: None



   .. py:attribute:: spark_submit_params
      :value: None



   .. py:attribute:: idempotency_token
      :value: None



   .. py:attribute:: databricks_conn_id
      :value: 'databricks_default'



   .. py:attribute:: polling_period_seconds
      :value: 30



   .. py:attribute:: databricks_retry_limit
      :value: 3



   .. py:attribute:: databricks_retry_delay
      :value: 1



   .. py:attribute:: databricks_retry_args
      :value: None



   .. py:attribute:: wait_for_termination
      :value: True



   .. py:attribute:: deferrable


   .. py:attribute:: repair_run
      :value: False



   .. py:attribute:: databricks_repair_reason_new_settings


   .. py:attribute:: cancel_previous_runs
      :value: False



   .. py:attribute:: forward_dag_params
      :value: True



   .. py:attribute:: run_id
      :type:  int | None
      :value: None



   .. py:attribute:: do_xcom_push
      :value: True



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: submit_job(context)

      Submit the job to the external system. Return its external ID.

      The returned ID must not be ``None``, a ``None`` return is treated as
      "no ID available" and the ID will not be persisted to task state.



   .. py:method:: get_job_status(external_id, context)

      Query the external system for the current job status.

      ``context`` is provided so implementations can use it if needed to implement advanced features such as:

      - cache terminal status to ``task_state_store`` when the remote resource may be
        ephemeral (e.g. a K8s driver pod that gets garbage-collected after completion),



   .. py:method:: is_job_active(status)

      Return True if the job is still running and can be reconnected to.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"RUNNING"``, ``"Pending"``, ``"ContainerCreating"``).



   .. py:method:: is_job_succeeded(status)

      Return True if the job completed successfully.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"FINISHED"``, ``"Succeeded"``).



   .. py:method:: poll_until_complete(external_id, context)

      Block until the job reaches a terminal state. Raise on failure.



   .. py:method:: get_job_result(external_id, context)

      Return the job result after completion. Return None if not applicable.



   .. py:method:: execute_complete(context, event = None)


   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



.. py:class:: DatabricksSQLStatementsOperator(statement, warehouse_id, *, catalog = None, schema = None, parameters = None, databricks_conn_id = 'databricks_default', polling_period_seconds = 30, databricks_retry_limit = 3, databricks_retry_delay = 1, databricks_retry_args = None, do_xcom_push = True, wait_for_termination = True, timeout = 3600, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), query_tags = None, include_airflow_query_tags = True, **kwargs)

   Bases: :py:obj:`airflow.providers.databricks.utils.mixins.DatabricksSQLStatementsMixin`, :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Submits a Databricks SQL Statement to Databricks using the api/2.0/sql/statements/ API endpoint.

   See: https://docs.databricks.com/api/workspace/statementexecution

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DatabricksSQLStatementsOperator`

   :param statement: The SQL statement to execute. The statement can optionally be parameterized, see parameters.
   :param warehouse_id: Warehouse upon which to execute a statement.
   :param catalog: Sets default catalog for statement execution, similar to USE CATALOG in SQL.
   :param schema: Sets default schema for statement execution, similar to USE SCHEMA in SQL.
   :param parameters: A list of parameters to pass into a SQL statement containing parameter markers.

       .. seealso::
           https://docs.databricks.com/api/workspace/statementexecution/executestatement#parameters
   :param wait_for_termination: if we should wait for termination of the statement execution. ``True`` by default.
   :param databricks_conn_id: Reference to the :ref:`Databricks connection <howto/connection:databricks>`.
       By default and in the common case this will be ``databricks_default``. To use
       token based authentication, provide the key ``token`` in the extra field for the
       connection and create the key ``host`` and leave the ``host`` field empty. (templated)
   :param polling_period_seconds: Controls the rate which we poll for the result of
       this statement. By default the operator will poll every 30 seconds.
   :param databricks_retry_limit: Amount of times retry if the Databricks backend is
       unreachable. Its value must be greater than or equal to 1.
   :param databricks_retry_delay: Minimum wait in seconds between retryable attempts when
       using the default retry strategy. The wait uses exponential backoff (doubling after
       each failure, capped at ``2 ** databricks_retry_limit`` seconds). May be a floating
       point number.
   :param databricks_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param do_xcom_push: Whether we should push statement_id to xcom.:
   :param timeout: The timeout for the Airflow task executing the SQL statement. By default a value of 3600 seconds is used.
   :param deferrable: Run operator in the deferrable mode.
   :param query_tags: Optional dictionary of query tags to attach to the SQL statement. Tags are
       passed as the ``query_tags`` field in the Databricks Statement Execution REST API request body.
       See https://docs.databricks.com/api/workspace/statementexecution/executestatement
   :param include_airflow_query_tags: If True, add Airflow DAG/task/run metadata as query tags.
       Defaults to True.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('databricks_conn_id', 'query_tags')



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.json-tpl',)



   .. py:attribute:: ui_color
      :value: '#1CB1C2'



   .. py:attribute:: ui_fgcolor
      :value: '#fff'



   .. py:attribute:: statement


   .. py:attribute:: warehouse_id


   .. py:attribute:: catalog
      :value: None



   .. py:attribute:: schema
      :value: None



   .. py:attribute:: parameters
      :value: None



   .. py:attribute:: databricks_conn_id
      :value: 'databricks_default'



   .. py:attribute:: polling_period_seconds
      :value: 30



   .. py:attribute:: databricks_retry_limit
      :value: 3



   .. py:attribute:: databricks_retry_delay
      :value: 1



   .. py:attribute:: databricks_retry_args
      :value: None



   .. py:attribute:: wait_for_termination
      :value: True



   .. py:attribute:: deferrable


   .. py:attribute:: query_tags


   .. py:attribute:: include_airflow_query_tags
      :value: True



   .. py:attribute:: statement_id
      :type:  str | None
      :value: None



   .. py:attribute:: timeout
      :value: 3600



   .. py:attribute:: do_xcom_push
      :value: True



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: get_openlineage_facets_on_complete(_)

      Implement _on_complete because we use statement_id.



.. py:class:: DatabricksTaskBaseOperator(caller = 'DatabricksTaskBaseOperator', databricks_conn_id = 'databricks_default', databricks_task_key = '', databricks_retry_args = None, databricks_retry_delay = 1, databricks_retry_limit = 3, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), existing_cluster_id = '', job_cluster_key = '', new_cluster = None, polling_period_seconds = 5, wait_for_termination = True, workflow_run_metadata = None, max_retries = None, min_retry_interval_millis = None, retry_on_timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`, :py:obj:`abc.ABC`


   Base class for operators that are run as Databricks job tasks or tasks within a Databricks workflow.

   :param caller: The name of the caller operator to be used in the logs.
   :param databricks_conn_id: The name of the Airflow connection to use.
   :param databricks_task_key: An optional task_key used to refer to the task by Databricks API. By
       default this will be set to the hash of ``dag_id + task_id``.
   :param databricks_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param databricks_retry_delay: Minimum wait in seconds between retryable attempts when
       using the default retry strategy (exponential backoff). May be a floating point number.
   :param databricks_retry_limit: Amount of times to retry if the Databricks backend is unreachable.
   :param deferrable: Whether to run the operator in the deferrable mode.
   :param existing_cluster_id: ID for existing cluster on which to run this task.
   :param job_cluster_key: The key for the job cluster.
   :param new_cluster: Specs for a new cluster on which this task will be run.
   :param notebook_packages: A list of the Python libraries to be installed on the cluster running the
       notebook.
   :param notebook_params: A dict of key-value pairs to be passed as optional params to the notebook task.
   :param polling_period_seconds: Controls the rate which we poll for the result of this notebook job run.
   :param wait_for_termination: if we should wait for termination of the job run. ``True`` by default.
   :param workflow_run_metadata: Metadata for the workflow run. This is used when the operator is used within
       a workflow. It is expected to be a dictionary containing the run_id and conn_id for the workflow.
   :param max_retries: Databricks task retry count. Use ``-1`` for unlimited retries.
   :param min_retry_interval_millis: Minimum interval between Databricks task retries.
   :param retry_on_timeout: Whether Databricks retries timed-out tasks.


   .. py:attribute:: caller
      :value: 'DatabricksTaskBaseOperator'



   .. py:attribute:: databricks_conn_id
      :value: 'databricks_default'



   .. py:attribute:: databricks_retry_args
      :value: None



   .. py:attribute:: databricks_retry_delay
      :value: 1



   .. py:attribute:: databricks_retry_limit
      :value: 3



   .. py:attribute:: deferrable


   .. py:attribute:: existing_cluster_id
      :value: ''



   .. py:attribute:: job_cluster_key
      :value: ''



   .. py:attribute:: new_cluster


   .. py:attribute:: polling_period_seconds
      :value: 5



   .. py:attribute:: wait_for_termination
      :value: True



   .. py:attribute:: workflow_run_metadata
      :value: None



   .. py:attribute:: max_retries
      :value: None



   .. py:attribute:: min_retry_interval_millis
      :value: None



   .. py:attribute:: retry_on_timeout
      :value: None



   .. py:attribute:: databricks_run_id
      :type:  int | None
      :value: None



   .. py:property:: databricks_task_key
      :type: str



   .. py:method:: monitor_databricks_job()

      Monitor the Databricks job until it terminates and surface its result.

      Picks one of three monitoring strategies, depending on whether Databricks-native retry
      attempts can occur and whether the operator runs inside a ``DatabricksWorkflowTaskGroup``:

      * standalone with native retries -> :meth:`_monitor_submit_run`, following the submit run
        whose own terminal state already accounts for every retry attempt.
      * workflow task with native retries -> :meth:`_monitor_workflow_task`, following the task's
        latest attempt and tolerating in-flight retries until they are exhausted (or, for unlimited
        retries, until the shared run is terminal).
      * otherwise -> :meth:`_monitor_single_attempt`, following one attempt and reporting as soon
        as it terminates (the historical behaviour, unchanged).



   .. py:method:: execute(context)

      Execute the operator. Launch the job and monitor it if wait_for_termination is set to True.



   .. py:method:: execute_complete(context, event)


   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



.. py:class:: DatabricksNotebookOperator(notebook_path, source, databricks_conn_id = 'databricks_default', databricks_retry_args = None, databricks_retry_delay = 1, databricks_retry_limit = 3, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), existing_cluster_id = '', job_cluster_key = '', new_cluster = None, notebook_packages = None, notebook_params = None, polling_period_seconds = 5, wait_for_termination = True, workflow_run_metadata = None, max_retries = None, min_retry_interval_millis = None, retry_on_timeout = None, **kwargs)

   Bases: :py:obj:`DatabricksTaskBaseOperator`


   Runs a notebook on Databricks using an Airflow operator.

   The DatabricksNotebookOperator allows users to launch and monitor notebook job runs on Databricks as
   Airflow tasks. It can be used as a part of a DatabricksWorkflowTaskGroup to take advantage of job
   clusters, which allows users to run their tasks on cheaper clusters that can be shared between tasks.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DatabricksNotebookOperator`

   :param notebook_path: The path to the notebook in Databricks.
   :param source: Optional location type of the notebook. When set to WORKSPACE, the notebook will be retrieved
           from the local Databricks workspace. When set to GIT, the notebook will be retrieved from a Git repository
           defined in git_source. If the value is empty, the task will use GIT if git_source is defined
           and WORKSPACE otherwise. For more information please visit
           https://docs.databricks.com/dev-tools/api/latest/jobs.html#operation/JobsCreate
   :param databricks_conn_id: The name of the Airflow connection to use.
   :param databricks_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param databricks_retry_delay: Minimum wait in seconds between retryable attempts when
       using the default retry strategy (exponential backoff). May be a floating point number.
   :param databricks_retry_limit: Amount of times to retry if the Databricks backend is unreachable.
   :param deferrable: Whether to run the operator in the deferrable mode.
   :param existing_cluster_id: ID for existing cluster on which to run this task.
   :param job_cluster_key: The key for the job cluster.
   :param new_cluster: Specs for a new cluster on which this task will be run.
   :param notebook_packages: A list of the Python libraries to be installed on the cluster running the
       notebook.
   :param notebook_params: A dict of key-value pairs to be passed as optional params to the notebook task.
   :param polling_period_seconds: Controls the rate which we poll for the result of this notebook job run.
   :param wait_for_termination: if we should wait for termination of the job run. ``True`` by default.
   :param workflow_run_metadata: Metadata for the workflow run. This is used when the operator is used within
       a workflow. It is expected to be a dictionary containing the run_id and conn_id for the workflow.
   :param max_retries: Databricks task retry count. Use ``-1`` for unlimited retries.
   :param min_retry_interval_millis: Minimum interval between Databricks task retries.
   :param retry_on_timeout: Whether Databricks retries timed-out tasks.


   .. py:attribute:: template_fields
      :value: ('notebook_params', 'workflow_run_metadata', 'max_retries', 'min_retry_interval_millis',...



   .. py:attribute:: CALLER
      :value: 'DatabricksNotebookOperator'



   .. py:attribute:: notebook_path


   .. py:attribute:: source


   .. py:attribute:: notebook_packages
      :value: []



   .. py:attribute:: notebook_params


.. py:class:: DatabricksTaskOperator(task_config, databricks_conn_id = 'databricks_default', databricks_retry_args = None, databricks_retry_delay = 1, databricks_retry_limit = 3, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), existing_cluster_id = '', job_cluster_key = '', new_cluster = None, polling_period_seconds = 5, wait_for_termination = True, workflow_run_metadata = None, max_retries = None, min_retry_interval_millis = None, retry_on_timeout = None, **kwargs)

   Bases: :py:obj:`DatabricksTaskBaseOperator`


   Runs a task on Databricks using an Airflow operator.

   The DatabricksTaskOperator allows users to launch and monitor task job runs on Databricks as Airflow
   tasks. It can be used as a part of a DatabricksWorkflowTaskGroup to take advantage of job clusters, which
   allows users to run their tasks on cheaper clusters that can be shared between tasks.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DatabricksTaskOperator`

   :param task_config: The configuration of the task to be run on Databricks.
   :param databricks_conn_id: The name of the Airflow connection to use.
   :param databricks_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param databricks_retry_delay: Minimum wait in seconds between retryable attempts when
       using the default retry strategy (exponential backoff). May be a floating point number.
   :param databricks_retry_limit: Amount of times to retry if the Databricks backend is unreachable.
   :param deferrable: Whether to run the operator in the deferrable mode.
   :param existing_cluster_id: ID for existing cluster on which to run this task.
   :param job_cluster_key: The key for the job cluster.
   :param new_cluster: Specs for a new cluster on which this task will be run.
   :param polling_period_seconds: Controls the rate which we poll for the result of this notebook job run.
   :param wait_for_termination: if we should wait for termination of the job run. ``True`` by default.
   :param max_retries: Databricks task retry count, overriding ``task_config`` when set.
   :param min_retry_interval_millis: Minimum retry interval, overriding ``task_config`` when set.
   :param retry_on_timeout: Whether Databricks retries timed-out tasks, overriding ``task_config`` when set.


   .. py:attribute:: CALLER
      :value: 'DatabricksTaskOperator'



   .. py:attribute:: template_fields
      :value: ('databricks_conn_id', 'task_config', 'workflow_run_metadata', 'max_retries',...



   .. py:attribute:: task_config


